module/core/former/tests/inc/former_enum_tests/named_tests/compile_fail/mod.rs
// mod struct_zero_default_error;
// mod struct_zero_subform_scalar_error;